--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ticketplushq/arc-plugin-multi-region",
-  "version": "1.1.3",
+  "version": "1.1.4-RC.0",
   "description": "Architect plugin for deploy to multiple regions",
   "main": "src/index.js",
   "scripts": {
